Stream advance Collector interface